# BezierCurveRedactor

./: README.md
Cpp/: CMakeLists.txt
Cpp/src/: MainWindow.cpp  MainWindow.h  MovablePoint.cpp  MovablePoint.h  Point.cpp  Point.h  main.cpp
Python/: MainWindow.py  main.py  moveble_point.py  point.py
